enhanced findAllInGivenRange method